test/fail_compile/use_before_def.tas
.set foo, (@bar + 1)
.set bar, 1

